--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                         <section class="main_section">
                                 <div class="inner content">
                                         <h2 class="name">작성자 : 강미나</h2>
-                                         <ul>
+                                        <ul>
                                                 <strong class="title"> 14주차 실습 과제 </strong>
                                                 <span>사이트명 : 고려대학교 </span>
                                                 <span> 특징 - 통 다단 메뉴 / 반응형 / 동영상 </span>
 
-                                                <li class="click"><a href="https://www.korea.ac.kr/mbshome/mbs/university/index.do" target="_blank">
+                                                <li class="click"><a
+                                                                href="https://www.korea.ac.kr/mbshome/mbs/university/index.do"
+                                                                target="_blank">
                                                                 원본 사이트</a></li>
                                                 <li class="click"><a
                                                                 href="https://kangmina91.github.io/miniproject230811"
@@ -97,8 +99,7 @@
                                                 <li class="click"><a href="https://www.tescomwireless.com/"
                                                                 target="_blank">
                                                                 원본 사이트</a></li>
-                                                 <li class="click"><a
-                                                                href="http://gmn0508.dothome.co.kr/"
+                                                <li class="click"><a href="http://gmn0508.dothome.co.kr/"
                                                                 target="_blank"> 그누보드 호스팅
                                                                 구현 페이지</a></li>
                                                 <li class="click"><a
@@ -222,7 +223,7 @@
                                                 <span> 특징 - 개별 다단 메뉴 / 슬릭 슬라이드 / 슬라이드 데이터 / 슬라이드 재생 멈춤 버튼 / 이미지 커버 / 동영상
                                                         박스 </span>
 
-                                                <li class="click"><a href=" https://www.hyundai.com/kr/ko/e"
+                                                <li class="click"><a href="https://www.hyundai.com/kr/ko/e"
                                                                 target="_blank">
                                                                 원본 사이트</a></li>
                                                 <li class="click"><a
